--- a/Anyaroth/Anyaroth/Anyaroth.vcxproj.filters
+++ b/Anyaroth/Anyaroth/Anyaroth.vcxproj.filters
@@ -226,8 +226,12 @@
     <ClCompile Include="DialoguePanel.cpp">
       <Filter>Archivos de código\HUDs</Filter>
     </ClCompile>
-    <ClCompile Include="Interactable.cpp" />
-    <ClCompile Include="NPC.cpp" />
+    <ClCompile Include="Interactable.cpp">
+      <Filter>Archivos de código\Objects\Interactables</Filter>
+    </ClCompile>
+    <ClCompile Include="NPC.cpp">
+      <Filter>Archivos de código\Objects\Interactables</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h">
@@ -491,8 +495,12 @@
     <ClInclude Include="DialoguePanel.h">
       <Filter>Archivos de encabezado\HUDs</Filter>
     </ClInclude>
-    <ClInclude Include="Interactable.h" />
-    <ClInclude Include="NPC.h" />
+    <ClInclude Include="Interactable.h">
+      <Filter>Archivos de encabezado\Objects\Interactables</Filter>
+    </ClInclude>
+    <ClInclude Include="NPC.h">
+      <Filter>Archivos de encabezado\Objects\Interactables</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Archivos de encabezado">
@@ -587,6 +595,12 @@
     </Filter>
     <Filter Include="Archivos de código\Melee">
       <UniqueIdentifier>{36c1cf67-8b51-4fad-a240-8b9818e16d0c}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Archivos de encabezado\Objects\Interactables">
+      <UniqueIdentifier>{7c8a5f1c-0a77-493f-9fb9-1658c45d27cf}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Archivos de código\Objects\Interactables">
+      <UniqueIdentifier>{e3c955f9-e850-4297-8ea0-2269ef7d7f36}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
