--- a/Anyaroth/Anyaroth/Anyaroth.vcxproj
+++ b/Anyaroth/Anyaroth/Anyaroth.vcxproj
@@ -141,8 +141,12 @@
     <ClCompile Include="Axe.cpp" />
     <ClCompile Include="BackGround.cpp" />
     <ClCompile Include="BasicPistol.cpp" />
+    <ClCompile Include="BasicRifle.cpp" />
     <ClCompile Include="BasicShotgun.cpp" />
     <ClCompile Include="BodyComponent.cpp" />
+    <ClCompile Include="BounceOrbCannon.cpp" />
+    <ClCompile Include="BouncingBullet.cpp" />
+    <ClCompile Include="BouncingBulletPool.cpp" />
     <ClCompile Include="BomberEnemy.cpp" />
     <ClCompile Include="BulletPool.cpp" />
     <ClCompile Include="Capsule.cpp" />
@@ -151,6 +155,8 @@
     <ClCompile Include="DialogueTextUI.cpp" />
     <ClCompile Include="DistanceEnemy.cpp" />
     <ClCompile Include="EnemyArm.cpp" />
+    <ClCompile Include="ImprovedRifle.cpp" />
+    <ClCompile Include="ImprovedShotgun.cpp" />
     <ClCompile Include="ExplosiveBulletPool.cpp" />
     <ClCompile Include="LevelManager.cpp" />
     <ClCompile Include="Map.cpp" />
@@ -158,6 +164,8 @@
     <ClCompile Include="FlyingEnemy.cpp" />
     <ClCompile Include="MovingComponent.cpp" />
     <ClCompile Include="Melee.cpp" />
+    <ClCompile Include="PiercingBulletPool.cpp" />
+    <ClCompile Include="PiercingBullet.cpp" />
     <ClCompile Include="PlayerArm.cpp" />
     <ClCompile Include="ArmControllerComponent.cpp" />
     <ClCompile Include="BossPanel.cpp" />
@@ -203,6 +211,7 @@
     <ClCompile Include="PlayStateHUD.cpp" />
     <ClCompile Include="PoolWrapper.cpp" />
     <ClCompile Include="RenderComponent.cpp" />
+    <ClCompile Include="Shotgun.cpp" />
     <ClCompile Include="SpawnerEnemy.cpp" />
     <ClCompile Include="SoundManager.cpp" />
     <ClCompile Include="SpriteComponent.cpp" />
@@ -215,6 +224,7 @@
     <ClCompile Include="TTFclass.cpp" />
     <ClCompile Include="UIElement.cpp" />
     <ClCompile Include="Vector2D.cpp" />
+    <ClCompile Include="WeaponManager.cpp" />
     <ClCompile Include="WeaponryViewer.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -228,8 +238,12 @@
     <ClInclude Include="Axe.h" />
     <ClInclude Include="BackGround.h" />
     <ClInclude Include="BasicPistol.h" />
+    <ClInclude Include="BasicRifle.h" />
     <ClInclude Include="BasicShotgun.h" />
     <ClInclude Include="BodyComponent.h" />
+    <ClInclude Include="BounceOrbCannon.h" />
+    <ClInclude Include="BouncingBullet.h" />
+    <ClInclude Include="BouncingBulletPool.h" />
     <ClInclude Include="BomberEnemy.h" />
     <ClInclude Include="Capsule.h" />
     <ClInclude Include="Cursor.h" />
@@ -237,6 +251,8 @@
     <ClInclude Include="DialogueTextUI.h" />
     <ClInclude Include="DistanceEnemy.h" />
     <ClInclude Include="EnemyArm.h" />
+    <ClInclude Include="ImprovedRifle.h" />
+    <ClInclude Include="ImprovedShotgun.h" />
     <ClInclude Include="ExplosiveBulletPool.h" />
     <ClInclude Include="LevelManager.h" />
     <ClInclude Include="Map.h" />
@@ -245,6 +261,8 @@
     <ClInclude Include="MovingComponent.h" />
     <ClInclude Include="ObjectPool.h" />
     <ClInclude Include="Melee.h" />
+    <ClInclude Include="PiercingBulletPool.h" />
+    <ClInclude Include="PiercingBullet.h" />
     <ClInclude Include="PlayerArm.h" />
     <ClInclude Include="ArmControllerComponent.h" />
     <ClInclude Include="BossPanel.h" />
@@ -296,6 +314,7 @@
     <ClInclude Include="PoolWrapper.h" />
     <ClInclude Include="RenderComponent.h" />
     <ClInclude Include="SDLError.h" />
+    <ClInclude Include="Shotgun.h" />
     <ClInclude Include="SpawnerEnemy.h" />
     <ClInclude Include="SoundManager.h" />
     <ClInclude Include="SpriteComponent.h" />
@@ -308,6 +327,7 @@
     <ClInclude Include="TTFclass.h" />
     <ClInclude Include="UIElement.h" />
     <ClInclude Include="Vector2D.h" />
+    <ClInclude Include="WeaponManager.h" />
     <ClInclude Include="WeaponryViewer.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
