Sistema dialogo y arreglos (#42)
* Creada clase de Interactable

* Libreria incluida

* GitIgnore reestablecido

* Icono de interaccion

* Creada clase de NPC

* Cambiado _active y NPC terminado

* Terminando textWrapping del dialogo

* Por fin terminado el dialogo

* Corregido input de X

* Cambiado el arte del dialogo para que se ajuste al HUD

* Arreglado que se pongan en rojo todos los enemies (mas o menos)

* Delete AnyarothDebug.exe

* Arreglos de merge

--- a/Anyaroth/Anyaroth/Anyaroth.vcxproj
+++ b/Anyaroth/Anyaroth/Anyaroth.vcxproj
@@ -155,6 +155,8 @@
     <ClCompile Include="DialogueTextUI.cpp" />
     <ClCompile Include="DistanceEnemy.cpp" />
     <ClCompile Include="EnemyArm.cpp" />
+    <ClCompile Include="Interactable.cpp" />
+    <ClCompile Include="NPC.cpp" />
     <ClCompile Include="ImprovedRifle.cpp" />
     <ClCompile Include="ImprovedShotgun.cpp" />
     <ClCompile Include="ExplosiveBulletPool.cpp" />
@@ -251,6 +253,7 @@
     <ClInclude Include="DialogueTextUI.h" />
     <ClInclude Include="DistanceEnemy.h" />
     <ClInclude Include="EnemyArm.h" />
+    <ClInclude Include="Interactable.h" />
     <ClInclude Include="ImprovedRifle.h" />
     <ClInclude Include="ImprovedShotgun.h" />
     <ClInclude Include="ExplosiveBulletPool.h" />
@@ -259,6 +262,7 @@
     <ClInclude Include="ExplosiveBullet.h" />
     <ClInclude Include="FlyingEnemy.h" />
     <ClInclude Include="MovingComponent.h" />
+    <ClInclude Include="NPC.h" />
     <ClInclude Include="ObjectPool.h" />
     <ClInclude Include="Melee.h" />
     <ClInclude Include="PiercingBulletPool.h" />
