--- a/Anyaroth/Anyaroth/Anyaroth.vcxproj.filters
+++ b/Anyaroth/Anyaroth/Anyaroth.vcxproj.filters
@@ -235,12 +235,6 @@
     <ClCompile Include="ExplosiveBulletPool.cpp">
       <Filter>Archivos de código fuente\Pools</Filter>
     </ClCompile>
-    <ClCompile Include="Boss1.cpp">
-      <Filter>Archivos de código fuente\Objects\Enemies\Bosses</Filter>
-    </ClCompile>
-    <ClCompile Include="BotonLanzaMisiles.cpp" />
-    <ClCompile Include="MisilBoss1.cpp">
-      <Filter>Archivos de encabezado\Objects\Bullets</Filter>
     <ClCompile Include="AnimatedImageUI.cpp">
       <Filter>Archivos de código fuente\HUD\UIElements</Filter>
     </ClCompile>
@@ -262,7 +256,6 @@
     <ClCompile Include="Bullet.cpp">
       <Filter>Archivos de código\Objects\Bullets</Filter>
     </ClCompile>
-    <ClCompile Include="PiercingBullet.cpp" />
     <ClCompile Include="BasicRifle.cpp">
       <Filter>Archivos de código fuente\Guns</Filter>
     </ClCompile>
@@ -290,11 +283,23 @@
     <ClCompile Include="BouncingBullet.cpp">
       <Filter>Archivos de código fuente\Objects\Bullets</Filter>
     </ClCompile>
+    <ClCompile Include="Boss1.cpp">
+      <Filter>Archivos de código fuente\Objects\Enemies\Bosses</Filter>
+    </ClCompile>
+    <ClCompile Include="BotonLanzaMisiles.cpp">
+      <Filter>Archivos de código fuente\Objects\Interactables</Filter>
+    </ClCompile>
     <ClCompile Include="Interactable.cpp">
-      <Filter>Archivos de código\Objects\Interactables</Filter>
+      <Filter>Archivos de código fuente\Objects\Interactables</Filter>
     </ClCompile>
     <ClCompile Include="NPC.cpp">
-      <Filter>Archivos de código\Objects\Interactables</Filter>
+      <Filter>Archivos de código fuente\Objects\Interactables</Filter>
+    </ClCompile>
+    <ClCompile Include="PiercingBullet.cpp">
+      <Filter>Archivos de código fuente\Objects\Bullets</Filter>
+    </ClCompile>
+    <ClCompile Include="MisilBoss1.cpp">
+      <Filter>Archivos de código fuente\Objects</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -550,11 +555,6 @@
     <ClInclude Include="ExplosiveBulletPool.h">
       <Filter>Archivos de encabezado\Pools</Filter>
     </ClInclude>
-    <ClInclude Include="Boss1.h">
-      <Filter>Archivos de encabezado\Objects\Enemies\Bosses</Filter>
-    </ClInclude>
-    <ClInclude Include="BotonLanzaMisiles.h" />
-    <ClInclude Include="MisilBoss1.h" />
     <ClInclude Include="AnimatedImageUI.h">
       <Filter>Archivos de encabezado\HUD\UIElements</Filter>
     </ClInclude>
@@ -617,6 +617,15 @@
     </ClInclude>
     <ClInclude Include="NPC.h">
       <Filter>Archivos de encabezado\Objects\Interactables</Filter>
+    </ClInclude>
+    <ClInclude Include="Boss1.h">
+      <Filter>Archivos de encabezado\Objects\Enemies\Bosses</Filter>
+    </ClInclude>
+    <ClInclude Include="BotonLanzaMisiles.h">
+      <Filter>Archivos de encabezado\Objects\Interactables</Filter>
+    </ClInclude>
+    <ClInclude Include="MisilBoss1.h">
+      <Filter>Archivos de encabezado\Objects</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -749,19 +758,20 @@
     <Filter Include="Archivos de código fuente\Objects\Player">
       <UniqueIdentifier>{fbeacda4-f6f1-4d13-989f-c1371de5a063}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Archivos de código fuente\Objects\Enemies\Bosses">
-      <UniqueIdentifier>{c03f4dd0-3410-41bb-a91d-023234e49cb7}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Archivos de encabezado\Objects\Enemies\Bosses">
-      <UniqueIdentifier>{ae89c5cd-2224-4756-ae5f-329f67ee3d17}</UniqueIdentifier>
     <Filter Include="Archivos de encabezado\Objects\Bullets">
       <UniqueIdentifier>{1d363188-42c1-4860-abb0-ffa5e1951368}</UniqueIdentifier>
     </Filter>
     <Filter Include="Archivos de encabezado\Objects\Interactables">
       <UniqueIdentifier>{7c8a5f1c-0a77-493f-9fb9-1658c45d27cf}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Archivos de código\Objects\Interactables">
-      <UniqueIdentifier>{e3c955f9-e850-4297-8ea0-2269ef7d7f36}</UniqueIdentifier>
+    <Filter Include="Archivos de encabezado\Objects\Enemies\Bosses">
+      <UniqueIdentifier>{189ebb02-4804-4d5b-b000-e8b2b7c50a5e}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Archivos de código fuente\Objects\Enemies\Bosses">
+      <UniqueIdentifier>{81f10e5b-a769-401b-9f4d-924c7c7ec0cd}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Archivos de código fuente\Objects\Interactables">
+      <UniqueIdentifier>{a2aab5e8-1f03-438e-ad1c-94a98250433c}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
