--- a/Anyaroth/Anyaroth/Anyaroth.vcxproj
+++ b/Anyaroth/Anyaroth/Anyaroth.vcxproj
@@ -204,6 +204,7 @@
     <ClCompile Include="PlayStateHUD.cpp" />
     <ClCompile Include="PoolWrapper.cpp" />
     <ClCompile Include="RenderComponent.cpp" />
+    <ClCompile Include="ShopCanvas.cpp" />
     <ClCompile Include="ShopItem.cpp" />
     <ClCompile Include="ShopPanel.cpp" />
     <ClCompile Include="SpawnerEnemy.cpp" />
@@ -300,6 +301,7 @@
     <ClInclude Include="PoolWrapper.h" />
     <ClInclude Include="RenderComponent.h" />
     <ClInclude Include="SDLError.h" />
+    <ClInclude Include="ShopCanvas.h" />
     <ClInclude Include="ShopItem.h" />
     <ClInclude Include="ShopPanel.h" />
     <ClInclude Include="SpawnerEnemy.h" />
